# rust-learn

./: .gitignore
01_hello_world/: .gitignore  main.rs
03_guessing_game/guessing_game/src/: main.rs
04_ownership_reference_borrowing/orb/src/: main.rs
05_crud/crud/: .env.example  .gitignore  Cargo.toml  README.md  client.http  docker-compose.yaml  mods.dot
05_crud/crud/.sqlx/: query-05aa6e3c01af2930557cfbe39ea648ba3c8c453fedae84d7371ade901e38f2af.json  query-3b9fa26c2803a59f78cde17752be77ccff34835e6acd3542c2e1440943e6e8a3.json  query-65723297855b2ae9b8b8ce25628b7881bcbacb5931526ec218d35bf3bcd57a5e.json  query-91689cb04361849233034f30f64caa93f2b91ab28bd165be9435929076b02016.json  query-e16fa9f8b8e8f5562ac9c65e1dd86f9364383adec4b6ce6f60be4a6942b1337b.json
05_crud/crud/migrations/: 20260403100115_create_users_table.sql
05_crud/crud/src/: main.rs
05_crud/crud/src/config/: mod.rs
05_crud/crud/src/errors/: mod.rs
05_crud/crud/src/handlers/: user_handler.rs
05_crud/crud/src/logger/: mod.rs
05_crud/crud/src/middleware/: mod.rs  request_id.rs  state.rs
05_crud/crud/src/models/: user.rs
05_crud/crud/src/repositories/: mod.rs  user_repository.rs
05_crud/crud/src/routes/: mod.rs  user_route.rs
05_crud/crud/src/services/: mod.rs  user_service.rs
