# [package]
# name = "crud"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# anyhow = "1.0.102"
# async-trait = "0.1.89"
# axum = "0.8.8"
# chrono = "0.4.44"
# dotenv = "0.15.0"
# serde = "1.0.228"
# sqlx = "0.8.6"
# thiserror = "2.0.18"
# tokio = "1.50.0"
# tower = "0.5.3"
# tower-http = "0.6.8"
# tracing = "0.1.44"
# tracing-bunyan-formatter = "0.3.10"
# tracing-subscriber = "0.3.23"
# uuid = "1.23.0"
# validator = "0.20.0"

# [dev-dependencies]
# tokio-test = "0.4.5"

[package]
name = "crud"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crud"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-bunyan-formatter = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenv = "0.15"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"